--- a/index.html
+++ b/index.html
@@ -27,6 +27,11 @@
     <script src="js/games/neon_syntax.js" defer></script>
     <script src="js/games/verbum_alchimia.js" defer></script>
     <script src="js/games/silent_archive.js" defer></script>
+
+    <!-- Firebase SDK (Compat for Vanilla JS) -->
+    <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-app-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-auth-compat.js"></script>
+
     <script src="js/auth_provider.js" defer></script>
 
     <script src="https://cdn.tailwindcss.com"></script>
