--- a/index.html
+++ b/index.html
@@ -34,48 +34,77 @@
 
     <script src="js/auth_provider.js" defer></script>
 
-    <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <!-- Fonts -->
+    <link href="https://fonts.googleapis.com" rel="preconnect" />
+    <link crossorigin="" href="https://fonts.gstatic.com" rel="preconnect" />
     <link
-        href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;400;500;700&family=Noto+Sans+JP:wght@300;400;500;700&display=swap"
-        rel="stylesheet">
-    <link rel="stylesheet" href="css/styles.css">
+        href="https://fonts.googleapis.com/css2?family=Lexend:wght@300;400;500;600;700;800&family=Noto+Sans:wght@400;500;700&family=Noto+Sans+JP:wght@400;500;700&family=Plus+Jakarta+Sans:wght@400;500;600;700;800&display=swap"
+        rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:wght,FILL@100..700,0..1&display=swap"
+        rel="stylesheet" />
 
-    <!-- Google AdSense (손님 광고용) -->
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5240158357882882"
-        crossorigin="anonymous"></script>
-    <script
-        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDkmhTzFKcxxfQIrYlkcFjXAgIDdTZMdvU&callback=initJapanTravel&libraries=places,directions,geometry&v=weekly"
-        defer></script>
-    <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.0/dist/chart.umd.min.js" defer></script>
-
+    <!-- Tailwind CSS & Config -->
+    <script src="https://cdn.tailwindcss.com?plugins=forms,container-queries"></script>
     <script>
         tailwind.config = {
+            darkMode: "class",
             theme: {
                 extend: {
-                    fontFamily: {
-                        sans: ['Noto Sans KR', 'Noto Sans JP', 'sans-serif'],
-                    },
                     colors: {
-                        primary: '#FF4B4B',
-                        secondary: '#1E88E5',
+                        "primary": "#135bec", // JAPRO Blue
+                        "primary-dark": "#0e45b5",
+                        "primary-light": "#818cf8",
+                        "secondary": "#fbbf24",
+                        "accent": "#f43f5e",
+                        "background-light": "#f6f6f8",
+                        "background-dark": "#101622", // Deep Dark Blue
+                        "surface-light": "#ffffff",
+                        "surface-dark": "#1e293b",
+                        "card-light": "#ffffff",
+                        "card-dark": "#1b2433",
+                        "text-main": "#0d121b",
+                        "text-secondary": "#4c669a",
+                    },
+                    fontFamily: {
+                        "display": ["Lexend", "sans-serif"],
+                        "body": ["Noto Sans", "sans-serif"],
+                        "japanese": ["Noto Sans JP", "sans-serif"],
+                    },
+                    boxShadow: {
+                        'soft': '0 4px 20px -2px rgba(0, 0, 0, 0.05)',
+                        'glow': '0 0 15px rgba(19, 91, 236, 0.3)',
+                    },
+                    animation: {
+                        'fade-in-down': 'fadeInDown 0.8s ease-out',
+                        'fade-in-up': 'fadeInUp 0.8s ease-out',
+                    },
+                    keyframes: {
+                        fadeInDown: {
+                            '0%': { opacity: '0', transform: 'translateY(-20px)' },
+                            '100%': { opacity: '1', transform: 'translateY(0)' },
+                        },
+                        fadeInUp: {
+                            '0%': { opacity: '0', transform: 'translateY(20px)' },
+                            '100%': { opacity: '1', transform: 'translateY(0)' },
+                        }
                     }
                 }
             }
         }
+    </script>
 
-        // Service Worker Registration for PWA
-        if ('serviceWorker' in navigator) {
-            window.addEventListener('load', () => {
-                navigator.serviceWorker.register('./sw.js')
-                    .then(registration => {
-                        console.log('ServiceWorker registration successful with scope: ', registration.scope);
-                    })
-                    .catch(err => {
-                        console.log('ServiceWorker registration failed: ', err);
-                    });
-            });
-        }
+    // Service Worker Registration for PWA
+    if ('serviceWorker' in navigator) {
+    window.addEventListener('load', () => {
+    navigator.serviceWorker.register('./sw.js')
+    .then(registration => {
+    console.log('ServiceWorker registration successful with scope: ', registration.scope);
+    })
+    .catch(err => {
+    console.log('ServiceWorker registration failed: ', err);
+    });
+    });
+    }
     </script>
 
     <style>
@@ -1142,14 +1171,11 @@
                 }
             };
 
-            setTimeout(hideSplash, 800); // 정상 흐름
-            // 강제 제거 (만약 위 흐름이 막혔을 경우 대비)
+            // 정상 로드 시 0.8초 후 제거
+            setTimeout(hideSplash, 800);
+
+            // 안전장치: 3초 후 강제 제거
             setTimeout(hideSplash, 3000);
-        });
-        splash.style.opacity = '0';
-        setTimeout(() => splash.remove(), 500);
-                }
-            }, 800); // 0.8초 후 페이드아웃 시작
         });
     </script>
 
