--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
     <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-auth-compat.js"></script>
 
     <script src="js/auth_provider.js" defer></script>
+    <script src="js/learning/learning_engine.js" defer></script>
 
     <!-- Tailwind CSS & Config -->
     <script src="https://cdn.tailwindcss.com?plugins=forms,container-queries"></script>
@@ -115,43 +116,6 @@
             scrollbar-width: none;
         }
 
-        /* Splash Screen */
-        #splash-screen {
-            position: fixed;
-            inset: 0;
-            z-index: 9999;
-            background: linear-gradient(135deg, #135bec 0%, #0e45b5 100%);
-            display: flex;
-            flex-col;
-            align-items: center;
-            justify-content: center;
-        }
-
-        /* html, body의 스크롤 잠금을 강제로 해제합니다 */
-        html,
-        body {
-            overflow-y: auto !important;
-            /* 세로 스크롤 허용 */
-            height: auto !important;
-            /* 높이 제한 해제 */
-            position: static !important;
-            /* 고정 위치 해제 */
-            touch-action: auto !important;
-            /* 터치 동작(줌/스크롤) 허용 */
-            -webkit-overflow-scrolling: touch !important;
-            /* 부드러운 스크롤 */
-            overscroll-behavior-y: auto !important;
-            /* 바운스 효과 허용 */
-        }
-
-        /* 앱 컨테이너가 화면을 꽉 채워 스크롤을 막는 것을 방지 */
-        .app-container {
-            height: auto !important;
-            min-height: 100vh;
-            overflow: visible !important;
-        }
-
-        /* 내부 스크롤 영역의 제한도 해제 */
         .content-scroll {
             height: auto !important;
             overflow: visible !important;
@@ -248,49 +212,11 @@
         });
     </script>
 
-    <!-- 🎬 로딩 스플래시 화면 -->
-    <div id="splash-screen"
-        class="fixed inset-0 z-[100] bg-gradient-to-br from-red-600 via-red-500 to-orange-500 flex flex-col items-center justify-center transition-opacity duration-500">
-        <img src="images/app_icon.png" alt="JAP-BONG" class="w-28 h-28 rounded-3xl shadow-2xl mb-6 animate-bounce">
-        <h1 class="text-white text-3xl font-black tracking-tight mb-2">JAP-BONG</h1>
-        <p class="text-white/80 text-sm mb-8">Premium Japanese Learning</p>
-        <div class="flex gap-2">
-            <div class="w-3 h-3 bg-white rounded-full animate-pulse" style="animation-delay: 0s;"></div>
-            <div class="w-3 h-3 bg-white rounded-full animate-pulse" style="animation-delay: 0.2s;"></div>
-            <div class="w-3 h-3 bg-white rounded-full animate-pulse" style="animation-delay: 0.4s;"></div>
-        </div>
-    </div>
+    <!-- LOGIN SCREEN CONTAINER (Managed by DisplayManager) -->
+    <div id="login-screen" class="fixed inset-0 z-50"></div>
 
-    <div id="login-screen"
-        class="fixed inset-0 z-50 flex flex-col items-center justify-center p-4 transition-opacity duration-300"
-        style="background-image: url('images/BACK.png'); background-size: contain; background-repeat: no-repeat; background-position: center; background-color: #000;">
-
-        <div class="bg-white/80 backdrop-blur-sm p-6 rounded-3xl shadow-2xl w-full max-w-md border border-white/50">
-            <!-- 로고 영역: 세로 중앙 정렬 -->
-            <div class="text-center mb-6">
-                <img src="images/app_icon.png" alt="JAP-BONG" class="w-16 h-16 mx-auto rounded-2xl shadow-lg mb-3">
-                <h1 class="text-2xl font-black text-red-600 tracking-tight">JAP-BONG</h1>
-                <p class="text-sm text-gray-500 mt-1">Premium Japanese Learning 🇯🇵</p>
-            </div>
-
-            <!-- Dynamic Login Content - See js/templates.js -->
-            <div id="login-container"></div>
-
-            <!-- 손님 체험하기 버튼 -->
-            <div class="mt-4">
-                <button onclick="loginAsGuest()"
-                    class="w-full bg-gradient-to-r from-amber-400 to-orange-500 text-white p-3 rounded-2xl shadow-md hover:shadow-lg transition-all duration-200 flex items-center justify-center gap-3 group">
-                    <span class="text-2xl">🐿️</span>
-                    <div class="text-left">
-                        <span class="font-bold text-base">손님 체험하기</span>
-                        <p class="text-xs text-amber-100">비밀번호 없이 체험해보세요</p>
-                    </div>
-                </button>
-            </div>
-
-
-        </div>
-    </div>
+    <!-- Dynamic Login Content - See js/templates.js -->
+    <!-- The #login-screen container is already defined above and managed by DisplayManager -->
 
     <div class="app-container pt-14">
         <header id="app-header"
@@ -1178,28 +1104,10 @@
                 console.error('Conversation mode init failed:', e);
             }
 
-            // 5. 화면 관리자 초기화 (로그인 화면 표시)
+            // 5. 화면 관리자 초기화 (로그인 화면 즉시 표시)
             if (typeof DisplayManager !== 'undefined') {
                 DisplayManager.init();
             }
-
-            // 6. 스플래시 화면 숨기기 (안전장치 포함)
-            const hideSplash = () => {
-                const splash = document.getElementById('splash-screen');
-                if (splash) {
-                    splash.style.opacity = '0';
-                    splash.style.transition = 'opacity 0.5s ease-out';
-                    setTimeout(() => {
-                        if (splash.parentNode) splash.parentNode.removeChild(splash);
-                    }, 500);
-                }
-            };
-
-            // 정상 로드 시 0.5초 후 제거 (더 빠르게 진입)
-            setTimeout(hideSplash, 500);
-
-            // 안전장치
-            setTimeout(hideSplash, 2000);
         });
     </script>
 
